--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "astro": "^5.2.5",
     "@astrojs/tailwind": "^5.1.0",
-    "better-sqlite3": "^9.4.3",
+    "@libsql/client": "^0.5.6",
     "tailwindcss": "^3.4.1"
   }
 }
