--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "@libsql/client": "^0.5.6",
     "@supabase/supabase-js": "^2.39.7",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@astrojs/image": "^0.18.0",
+    "sharp": "^0.32.6"
   }
 }
