--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@libsql/client": "^0.5.6",
     "@supabase/supabase-js": "^2.39.7",
     "tailwindcss": "^3.4.1",
-    "@astrojs/image": "^0.17.3",
+    "@astrojs/sharp": "^1.0.0",
     "sharp": "^0.32.6"
   }
 }
