--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@astrojs/tailwind": "^5.1.0",
     "@libsql/client": "^0.5.6",
     "@supabase/supabase-js": "^2.39.7",
-    "tailwindcss": "^3.4.1",
-    "@astrojs/sharp": "^1.0.0",
-    "sharp": "^0.32.6"
+    "tailwindcss": "^3.4.1"
   }
 }
