--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^5.2.5",
     "@astrojs/tailwind": "^5.1.0",
+    "@supabase/supabase-js": "^2.39.7",
     "better-sqlite3": "^9.4.3",
     "tailwindcss": "^3.4.1"
   }
