--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "astro": "^5.2.5",
     "@astrojs/tailwind": "^5.1.0",
     "@supabase/supabase-js": "^2.39.7",
-    "better-sqlite3": "^9.4.3",
+    "@libsql/client": "^0.5.6",
     "tailwindcss": "^3.4.1"
   }
 }
