--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "@supabase/supabase-js": "^2.39.7",
     "bcryptjs": "^2.4.3",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
