--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.2.5",
     "@astrojs/tailwind": "^5.1.0",
     "@libsql/client": "^0.5.6",
+    "@supabase/supabase-js": "^2.39.7",
     "bcryptjs": "^2.4.3",
     "tailwindcss": "^3.4.1"
   },
